Bug 160594 - [Fetch API] SubresourceLoader::checkRedirectionCrossOriginAccessControl should not always assert in SameOrigin mode
Summary: [Fetch API] SubresourceLoader::checkRedirectionCrossOriginAccessControl shoul...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords:
Depends on:
Blocks: 151937
  Show dependency treegraph
 
Reported: 2016-08-05 03:04 PDT by youenn fablet
Modified: 2016-08-05 09:27 PDT (History)
3 users (show)

See Also:


Attachments
Patch (7.90 KB, patch)
2016-08-05 03:15 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2016-08-05 03:04:44 PDT
If redirection is same origin, it should not assert.
Comment 1 youenn fablet 2016-08-05 03:15:52 PDT
Created attachment 285416 [details]
Patch
Comment 2 WebKit Commit Bot 2016-08-05 09:27:27 PDT
Comment on attachment 285416 [details]
Patch

Clearing flags on attachment: 285416

Committed r204172: <http://trac.webkit.org/changeset/204172>
Comment 3 WebKit Commit Bot 2016-08-05 09:27:31 PDT
All reviewed patches have been landed.  Closing bug.